Added a basic home page html design

--- a/Website/home .html
+++ b/Website/home .html
@@ -1,2 +1,15 @@
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <div class="topnav">
+            <a class="active" href="#about">ABOUT</a>
+            <a href="#community">COMMUNITY</a>
+            <a href="#join">JOIN</a>
+            <a href="#log in">LOG IN</a>
+            <img src="assets/Full Logo.png" alt="Logo">
+          </div>
+    </head>
+    <body style="cursor: url('assets/Strawberry\ normal\ select.cur'), default">
+        <p>Text</p>
+    </body>
 </html>
