--- a/Website/home .html
+++ b/Website/home .html
@@ -2,10 +2,10 @@
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
         <div class="topnav">
-            <a class="active" href="#about">ABOUT</a>
-            <a href="#community">COMMUNITY</a>
-            <a href="#join">JOIN</a>
-            <a href="#log in">LOG IN</a>
+            <a class="active" href="Website\about.html">ABOUT</a>
+            <a href="Website/community.html">COMMUNITY</a>
+            <a href="Website/join.html">JOIN</a>
+            <a href="Website/log in.html">LOG IN</a>
             <img src="assets/Full Logo.png" alt="Logo">
           </div>
     </head>
