--- a/Website/Website/join.html
+++ b/Website/Website/join.html
@@ -2,10 +2,10 @@
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
         <div class="topnav">
-            <a href="Website/about.html"class="button">ABOUT</a>
-            <a href="Website/community.html"class="button">COMMUNITY</a>
-            <a href="Website/join.html"class="button">JOIN</a>
-            <a href="Website/log-in.html"class="button">LOG IN</a>
+            <a href="Website/about.html">ABOUT</a>
+            <a href="Website/community.html">COMMUNITY</a>
+            <a class="active" href="Website/join.html">JOIN</a>
+            <a href="Website/log-in.html">LOG IN</a>
             <img src="assets/Full Logo.png" alt="Logo">
           </div>
     </head>
