Added details to pages and fixed html file placements

--- a/Website/community.html
+++ b/Website/community.html
@@ -1,13 +1,13 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="navbar">
+        <div class="topnav">
             <div class="logo">
                 <img src="assets/Full Logo.png" alt="Logo">
             </div>
             <div class="buttons">
                 <a href="about.html"class="button">ABOUT</a>
-                <a href="community.html"class="button">COMMUNITY</a>
+                <a href="community.html"class="active">COMMUNITY</a>
                 <a href="join.html"class="button">JOIN</a>
                 <a href="log-in.html"class="button">LOG IN</a>
             </div>
