--- a/Website/log-in.html
+++ b/Website/log-in.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="navbar">
+        <div class="topnav">
             <div class="logo">
                 <img src="assets/Full Logo.png" alt="Logo">
             </div>
@@ -9,7 +9,7 @@
                 <a href="about.html"class="button">ABOUT</a>
                 <a href="community.html"class="button">COMMUNITY</a>
                 <a href="join.html"class="button">JOIN</a>
-                <a href="log-in.html"class="button">LOG IN</a>
+                <a href="log-in.html"class="active">LOG IN</a>
             </div>
           </div>
     </head>
