--- a/Website/about.html
+++ b/Website/about.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="navbar">
+        <div class="topnav">
             <div class="logo">
                 <img src="assets/Full Logo.png" alt="Logo">
             </div>
             <div class="buttons">
-                <a href="about.html"class="button">ABOUT</a>
+                <a href="about.html"class="active">ABOUT</a>
                 <a href="community.html"class="button">COMMUNITY</a>
                 <a href="join.html"class="button">JOIN</a>
                 <a href="log-in.html"class="button">LOG IN</a>
