--- a/Website/features.html
+++ b/Website/features.html
@@ -1,15 +1,15 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="navbar">
+        <div class="topnav">
             <div class="logo">
                 <img src="assets/Full Logo.png" alt="Logo">
             </div>
             <div class="buttons">
-                <a href="about.html"class="button">ABOUT</a>
-                <a href="community.html"class="button">COMMUNITY</a>
+                <a href="features.html"class="active">FEATURES</a>
+                <a href="pricing.html"class="button">PRICING</a>
                 <a href="join.html"class="button">JOIN</a>
-                <a href="log-in.html"class="button">LOG IN</a>
+                <a href="team.html"class="button">TEAM</a>
             </div>
           </div>
     </head>
