--- a/Website/team.html
+++ b/Website/team.html
@@ -6,10 +6,10 @@
                 <img src="assets/Full Logo.png" alt="Logo">
             </div>
             <div class="buttons">
-                <a href="about.html"class="button">ABOUT</a>
-                <a href="community.html"class="active">COMMUNITY</a>
+                <a href="features.html"class="active">FEATURES</a>
+                <a href="pricing.html"class="button">PRICING</a>
                 <a href="join.html"class="button">JOIN</a>
-                <a href="log-in.html"class="button">LOG IN</a>
+                <a href="team.html"class="button">TEAM</a>
             </div>
           </div>
     </head>
