Made de logo a home button and added easter egg

--- a/Website/about.html
+++ b/Website/about.html
@@ -3,7 +3,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <div class="topnav">
             <div class="logo">
-                <img src="assets/Full Logo.png" alt="Logo">
+                <a href="home .html" class="active">
+                    <img src="assets/Full Logo.png" alt="Logo">
+                </a>
             </div>
             <div class="buttons">
                 <a href="about.html"class="active">ABOUT</a>
