--- a/Website/home .html
+++ b/Website/home .html
@@ -3,7 +3,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <div class="navbar">
             <div class="logo">
-                <img src="assets/Full Logo.png" alt="Logo">
+                <a href="home .html" class="active">
+                    <img src="assets/Full Logo.png" alt="Logo">
+                </a>
             </div>
             <div class="buttons">
                 <a href="about.html"class="button">ABOUT</a>
@@ -18,7 +20,9 @@
             <div class="showcase">
                 <h1 class="showcase-text">Your Online Network of</h1>
                 <h1 class="3D-Printers">3D Printers</h1>
-                <img src="assets/car.png" alt="Logo">
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">
+                    <img src="assets/car.png" alt="Logo">
+                </a>
             </div>
         </p>
     </body>
