Started writing feature page text

--- a/Website/features.html
+++ b/Website/features.html
@@ -1,27 +1,11 @@
 <html>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="topnav">
-            <div class="logo">
-                <a href="home .html" class="active">
-                    <img src="assets/Full Logo.png" alt="Logo">
-                </a>
-            </div>
-            <div class="buttons">
-                <a href="features.html"class="active">FEATURES</a>
-                <a href="pricing.html"class="button">PRICING</a>
-                <a href="join.html"class="button">JOIN</a>
-                <a href="team.html"class="button">TEAM</a>
-            </div>
-          </div>
+        <title>Features</title>
     </head>
     <body style="cursor: url('assets/Strawberry\ normal\ select.cur'), default" >
-        <p>
-            <div class="showcase">
-                <h1 class="showcase-text">Your Online Network of</h1>
-                <h1 class="3D-Printers">3D Printers</h1>
-                <img src="assets/car.png" alt="Logo">
-            </div>
-        </p>
+        <h1>How 3DIT works</h1>
+        
+        <p>3DIT lets you connect with other 3D printer owners in your region.</p>
     </body>
 </html>
