--- a/Website/home.html
+++ b/Website/home.html
@@ -1,28 +1,13 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="navbar">
-            <div class="logo">
-                <a href="home.html" class="active">
-                    <img src="assets/Full Logo.png" alt="Logo">
-                </a>
-            </div>
-            <div class="buttons">
-                <a href="features.html"class="active">FEATURES</a>
-                <a href="pricing.html"class="button">PRICING</a>
-                <a href="join.html"class="button">JOIN</a>
-                <a href="team.html"class="button">TEAM</a>
-            </div>
-          </div>
+        <?php $IPATH = $_SERVER["DOCUMENT_ROOT"]."/assets/php/"; ?>
     </head>
     <body style="cursor: url('assets/Strawberry\ normal\ select.cur'), default" >
         <p>
             <div class="showcase">
                 <h1 class="showcase-text">Your Online Network of</h1>
                 <h1 class="3D-Printers">3D Printers</h1>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="button">
-                    <img src="assets/car.png" alt="Logo">
-                </a>
+                <img src="assets/car.png" alt="Logo">
             </div>
         </p>
     </body>
