--- a/Website/home.html
+++ b/Website/home.html
@@ -8,7 +8,7 @@
                 </a>
             </div>
             <div class="buttons">
-                <a href="features.html"class="active">FEATURES</a>
+                <a href="features.html"class="button">FEATURES</a>
                 <a href="pricing.html"class="button">PRICING</a>
                 <a href="join.html"class="button">JOIN</a>
                 <a href="team.html"class="button">TEAM</a>
