--- a/Website/features.html
+++ b/Website/features.html
@@ -1,31 +1,11 @@
 <html>
-<<<<<<< HEAD
     <link rel="stylesheet" type="text/css" href="style.css">
     <head>
-<<<<<<< HEAD
         <title>Features</title>
-=======
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="topnav">
-            <div class="logo">
-                <a href="home.html" class="active">
-                    <img src="assets/Full Logo.png" alt="Logo">
-                </a>
-            </div>
-            <div class="buttons">
-                <a href="features.html"class="active">FEATURES</a>
-                <a href="pricing.html"class="button">PRICING</a>
-                <a href="join.html"class="button">JOIN</a>
-                <a href="team.html"class="button">TEAM</a>
-            </div>
-          </div>
->>>>>>> 416e627384f4e4e29e2362340e7b30661fe4859e
     </head>
-=======
->>>>>>> a13d0d8befef0bbc9e668aba29d83c68bb567e9f
     <body style="cursor: url('assets/Strawberry\ normal\ select.cur'), default" >
         <h1>How 3DIT works</h1>
         
-        <p>3DIT lets you connect with other 3D printer owners in your region.</p>
+        <p>3DIT is a platform that lets people connect with 3D printer owners in their region, providing a fast, convenient sharing service.</p>
     </body>
 </html>
