Gave up on common header for now

--- a/Website/assets/php/header.html
+++ b/Website/assets/php/header.html
@@ -1,12 +1,14 @@
-<link rel="stylesheet" type="text/css" href="style.css">
-<div class="navbar">
-    <div class="logo">
-        <img src="assets/Full Logo.png" alt="Logo">
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <div class="navbar">
+        <div class="logo">
+            <img src="assets/Full Logo.png" alt="Logo">
+        </div>
+        <div class="buttons">
+            <a href="about.html"class="active">FEATURES</a>
+            <a href="pricing.html"class="button">PRICING</a>
+            <a href="join.html"class="button">JOIN</a>
+            <a href="team.html"class="button">TEAM</a>
+        </div>
     </div>
-    <div class="buttons">
-        <a href="about.html"class="active">FEATURES</a>
-        <a href="pricing.html"class="button">PRICING</a>
-        <a href="join.html"class="button">JOIN</a>
-        <a href="team.html"class="button">TEAM</a>
-    </div>
-</div>
+</head>
