--- a/Website/pricing.html
+++ b/Website/pricing.html
@@ -1,5 +1,18 @@
 <html>
-<<<<<<< HEAD
+    <head>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <div class="navbar">
+            <div class="logo">
+                <img src="assets/Full Logo.png" alt="Logo">
+            </div>
+            <div class="buttons">
+                <a href="about.html"class="active">FEATURES</a>
+                <a href="pricing.html"class="button">PRICING</a>
+                <a href="join.html"class="button">JOIN</a>
+                <a href="team.html"class="button">TEAM</a>
+            </div>
+        </div>
+    </head>
     <body>
         <div class="head">
             <h1>Printing price estimate</h1>
@@ -26,15 +39,5 @@
                 <input type="number" id="heiht" name="height"><br><br>
             </form>
         </div>
-=======
-    <body style="cursor: url('assets/Strawberry\ normal\ select.cur'), default" >
-        <p>
-            <div class="showcase">
-                <h1 class="showcase-text">Your Online Network of</h1>
-                <h1 class="3D-Printers">3D Printers</h1>
-                <img src="assets/car.png" alt="Logo">
-            </div>
-        </p>
->>>>>>> b3ba506caca3b918bb278a775ec45a4a65325b23
     </body>
 </html>
