--- a/Website/pricing.html
+++ b/Website/pricing.html
@@ -17,17 +17,13 @@
         <div class="head">
             <h1>Printing price estimate</h1>
         </div>
-        <div class="checkboxes">
+        <div class="priceEstimates">
 
             <p>Printing material:</p>
-            <input type="checkbox" id="carbon" name="material" value="carbon">
+            <input type="checkbox" id="carbon" name="material" value="true">
             <label for="carbon">I want to print with carbon fiber</label><br>
-            <input type="checkbox" id="plastic" name="material" value="plastic">
+            <input type="checkbox" id="plastic" name="material" value="true">
             <label for="plastic">I want to print with plastic fillaments</label><br>
-
-            <p>Print colour:</p>
-            <input type="checkbox" id="black" name="colour" value="black">
-            <label for="black">I want to print in black</label><br>
 
             <p>Printing size:</p>
             <form action="/action_page.php">
@@ -36,8 +32,43 @@
                 <label for="lenght">Lenght (cm):</label>
                 <input type="number" id="lenght" name="lenght"><br><br>
                 <label for="height">Height (cm):</label>
-                <input type="number" id="heiht" name="height"><br><br>
+                <input type="number" id="height" name="height"><br><br>
             </form>
+            <script>
+                function myPrice(){
+                    var width=document.getElementById("width").value;
+                    var lenght=document.getElementById("lenght").value;
+                    var height=document.getElementById("height").value;
+                    var size=(width*lenght);
+                    var price="";
+
+                    if(height<100){
+                        if(size<=50){
+                        price="10$";
+                        }else if(50<size && size<=100){
+                            price="15$";
+                        }else if(100<size && size<=150){
+                            price="20$";
+                        }else if(150<size && size<=200){
+                            price="40$";
+                        }else if(250<size && size<=300){
+                            price="60$";
+                        }else{
+                            price="Print size is too big for our printers!";
+                        }
+                    }else{
+                        price="Print height is too big for our printers!"
+                    }
+
+                    if(document.getElementById("carbon") == true){
+                        price=price*2
+                    }
+
+                    document.getElementById("showPrice").innerHTML = price;
+                }
+            </script>
+            <button type="button" onclick="myPrice()">Calculate</button>
+            <p id="showPrice">Price estimate:</p>
         </div>
     </body>
 </html>
