--- a/Website/features.html
+++ b/Website/features.html
@@ -1,23 +1,29 @@
 <html>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <head>
+    <head >
         <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="navbar">
-            <div class="logo">
-                <img src="assets/Full Logo.png" alt="Logo">
-            </div>
-            <div class="buttons">
-                <a href="about.html"class="active">FEATURES</a>
-                <a href="pricing.html"class="button">PRICING</a>
-                <a href="join.html"class="button">JOIN</a>
-                <a href="team.html"class="button">TEAM</a>
-            </div>
+        <div class="navbar" style="background-color:rgb(39, 39, 39); color:white">
+            <img src="assets/Full Logo.png" alt="Logo">
+            <a href="features.html"class="button">FEATURES</a>
+            <a href="pricing.html"class="button">PRICING</a>
+            <a href="join.html"class="button">JOIN</a>
+            <a href="team.html"class="button">TEAM</a>
         </div>
-        <title>Features</title>
     </head>
-    <body style="cursor: url('assets/Strawberry\ normal\ select.cur'), default" >
+    <body>
         <h1>How 3DIT works</h1>
         
         <p>3DIT is a platform that lets people connect with 3D printer owners in their region, providing a fast, convenient sharing service.</p>
     </body>
+    <footer style="background-color:rgb(39, 39, 39);color:white">
+        <a>Contact Us</a>
+        <br>
+        <a>About 3DIT</a>
+        <hr>
+        <div class="buttons">
+            <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+            <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32>
+            <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32>
+            <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32>
+        </div>
+    </footer>
 </html>
