--- a/Website/home.html
+++ b/Website/home.html
@@ -1,25 +1,15 @@
 <html>
-    <head>
-<<<<<<< HEAD
+    <head >
         <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="navbar">
-            <div class="logo">
-                <a href="home.html" class="active">
-                    <img src="assets/Full Logo.png" alt="Logo">
-                </a>
-            </div>
-            <div class="buttons">
-                <a href="features.html"class="button">FEATURES</a>
-                <a href="pricing.html"class="button">PRICING</a>
-                <a href="join.html"class="button">JOIN</a>
-                <a href="team.html"class="button">TEAM</a>
-            </div>
-          </div>
-=======
-        <?php $IPATH = $_SERVER["DOCUMENT_ROOT"]."/assets/php/"; ?>
->>>>>>> b3ba506caca3b918bb278a775ec45a4a65325b23
+        <div class="navbar" style="background-color:rgb(39, 39, 39); color:white">
+            <img src="assets/Full Logo.png" alt="Logo">
+            <a href="features.html"class="button">FEATURES</a>
+            <a href="pricing.html"class="button">PRICING</a>
+            <a href="join.html"class="button">JOIN</a>
+            <a href="team.html"class="button">TEAM</a>
+        </div>
     </head>
-    <body style="cursor: url('assets/Strawberry\ normal\ select.cur'), default" >
+    <body>
         <p>
             <div class="showcase">
                 <h1 class="showcase-text">Your Online Network of</h1>
@@ -28,4 +18,16 @@
             </div>
         </p>
     </body>
+    <footer style="background-color:rgb(39, 39, 39);color:white">
+        <a>Contact Us</a>
+        <br>
+        <a>About 3DIT</a>
+        <hr>
+        <div class="buttons">
+            <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+            <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32>
+            <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32>
+            <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32>
+        </div>
+    </footer>
 </html>
