--- a/Website/team.html
+++ b/Website/team.html
@@ -1,16 +1,12 @@
 <html>
-    <head>
+    <head >
         <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="navbar">
-            <div class="logo">
-                <img src="assets/Full Logo.png" alt="Logo">
-            </div>
-            <div class="buttons">
-                <a href="about.html"class="active">FEATURES</a>
-                <a href="pricing.html"class="button">PRICING</a>
-                <a href="join.html"class="button">JOIN</a>
-                <a href="team.html"class="button">TEAM</a>
-            </div>
+        <div class="navbar" style="background-color:rgb(39, 39, 39); color:white">
+            <img src="assets/Full Logo.png" alt="Logo">
+            <a href="features.html"class="button">FEATURES</a>
+            <a href="pricing.html"class="button">PRICING</a>
+            <a href="join.html"class="button">JOIN</a>
+            <a href="team.html"class="button">TEAM</a>
         </div>
     </head>
     <body>
@@ -27,4 +23,16 @@
        
     </head>
     </body>
+    <footer style="background-color:rgb(39, 39, 39);color:white">
+        <a>Contact Us</a>
+        <br>
+        <a>About 3DIT</a>
+        <hr>
+        <div class="buttons">
+            <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+            <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32>
+            <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32>
+            <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32>
+        </div>
+    </footer>
 </html>
