--- a/Website/home.html
+++ b/Website/home.html
@@ -12,6 +12,7 @@
     <body>
         <p>
             <div class="showcase">
+                <img src="assets/Home Page Background.png" alt="Background">
                 <h1 class="showcase-text">Your Online Network of</h1>
                 <h1 class="3D-Printers">3D Printers</h1>
                 <img src="assets/car.png" alt="Logo">
