Added decoy join page text

--- a/Website/join.html
+++ b/Website/join.html
@@ -9,15 +9,18 @@
             <a href="team.html"class="button">TEAM</a>
         </div>
     </head>
+
     <body>
-        <p>
-            <div class="showcase">
-                <h1 class="showcase-text">Your Online Network of</h1>
-                <h1 class="3D-Printers">3D Printers</h1>
-                <img src="assets/car.png" alt="Logo">
-            </div>
-        </p>
+        <h1>Step 1</h1>
+        <h2>Sign up with your email</h2>
+        <h3>We'll send you a confirmation code before the next step</h3>
+        <h5>Email</h5>
+        <h5>Confirm Email</h5>
+        <h5>Password</h5>
+        <h5>Confirm Password</h5>
+        <p>*Required Fields</p>
     </body>
+
     <footer style="background-color:rgb(39, 39, 39);color:white">
         <a>Contact Us</a>
         <br>
