Added decoy BUY button to pricing page

--- a/Website/pricing.html
+++ b/Website/pricing.html
@@ -81,6 +81,10 @@
             <p>Price estimate before tax and shipping:</p>
             <p id="showPrice"> </p>
         </div>
+
+        <div class="buy">
+            <a href="assets/unicorn.png">BUY</a>
+        </div>
     </body>
     <footer style="background-color:rgb(39, 39, 39);color:white">
         <a>Contact Us</a>
