Added decoy input text boxes for join page

--- a/Website/join.html
+++ b/Website/join.html
@@ -14,11 +14,18 @@
         <h1>Step 1</h1>
         <h2>Sign up with your email</h2>
         <h3>We'll send you a confirmation code before the next step</h3>
-        <h5>Email</h5>
-        <h5>Confirm Email</h5>
-        <h5>Password</h5>
-        <h5>Confirm Password</h5>
+        <form>
+            <label>Email*</label><br>
+            <input type="email" id="width" name="width"><br>
+            <label>Confirm Email*</label><br>
+            <input type="email" id="lenght" name="lenght"><br>
+            <label>Password*</label><br>
+            <input type="password" id="height" name="height"><br>
+            <label>Password*</label><br>
+            <input type="password" id="height" name="height"><br>
+        </form>
         <p>*Required Fields</p>
+        <h5>NEXT</h5>
     </body>
 
     <footer style="background-color:rgb(39, 39, 39);color:white">
