--- a/Website/home.html
+++ b/Website/home.html
@@ -16,6 +16,7 @@
                 <h1 class="showcase-text">Your Online Network of</h1>
                 <h1 class="3D-Printers">3D Printers</h1>
                 <img src="assets/car.png" alt="Logo">
+                <a href="join.html"class="button">REGISTER NOW</a>
             </div>
         </p>
     </body>
