Did some organization and css

--- a/Website/home.html
+++ b/Website/home.html
@@ -1,35 +1,41 @@
 <html>
     <head >
         <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="navbar" style="background-color:rgb(39, 39, 39); color:white">
-            <img src="assets/Full Logo.png" alt="Logo">
+        <header>
+            <a href="home.html">
+                <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
+            </a>
             <a href="features.html"class="button">FEATURES</a>
             <a href="pricing.html"class="button">PRICING</a>
             <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
-        </div>
+        </header>
     </head>
-    <body>
-        <p>
-            <div class="showcase">
-                <img src="assets/Home Page Background.png" alt="Background">
-                <h1 class="showcase-text">Your Online Network of</h1>
-                <h1 class="3D-Printers">3D Printers</h1>
-                <img src="assets/car.png" alt="Logo">
-                <a href="join.html"class="button">REGISTER NOW</a>
+    <body class="homeshowcase">
+        <div class="showcase-background">
+            <div>
+                <h1>Your Online Network of 3D Printers</h1>
+                <h3>Print what you want, where you want</p>
+                <h2>Connect with 3D printer owners in your city today!</h2>
+                <a href="join.html"class="single-button">REGISTER NOW</a>
             </div>
-        </p>
-    </body>
-    <footer style="background-color:rgb(39, 39, 39);color:white">
-        <a>Contact Us</a>
-        <br>
-        <a>About 3DIT</a>
-        <hr>
-        <div class="buttons">
-            <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
-            <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32>
-            <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32>
-            <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32>
+            <div>
+                <img src="assets/car.png" alt="Car Image">
+            </div>
         </div>
+    </body>
+    <footer>
+        <br>
+        <a class="info">Contact Us</a>
+        <br>
+        <br>
+        <a class="info">About 3DIT</a>
+        <br>
+        <br>
+        <hr>
+        <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+        <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="socials">
+        <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="socials">
+        <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="socials">
     </footer>
 </html>
