--- a/Website/join.html
+++ b/Website/join.html
@@ -1,13 +1,15 @@
 <html>
     <head >
         <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="navbar" style="background-color:rgb(39, 39, 39); color:white">
-            <img src="assets/Full Logo.png" alt="Logo">
-            <a href="features.html"class="button">FEATURES</a>
+        <header>
+            <a href="home.html">
+                <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
+            </a>
+            <a href="features.html" class="button">FEATURES</a>
             <a href="pricing.html"class="button">PRICING</a>
-            <a href="join.html"class="button">JOIN</a>
+            <a href="join.html"class="button active">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
-        </div>
+        </header>
     </head>
 
     <body>
@@ -25,19 +27,21 @@
             <input type="password" id="height" name="height"><br>
         </form>
         <p>*Required Fields</p>
-        <h5>NEXT</h5>
+        <a class="single-button" href="assets/unicorn.png">NEXT</a>
     </body>
 
-    <footer style="background-color:rgb(39, 39, 39);color:white">
-        <a>Contact Us</a>
+    <footer>
         <br>
-        <a>About 3DIT</a>
+        <a class="info">Contact Us</a>
+        <br>
+        <br>
+        <a class="info">About 3DIT</a>
+        <br>
+        <br>
         <hr>
-        <div class="buttons">
-            <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
-            <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32>
-            <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32>
-            <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32>
-        </div>
+        <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+        <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="socials">
+        <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="socials">
+        <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="socials">
     </footer>
 </html>
