--- a/Website/team.html
+++ b/Website/team.html
@@ -1,13 +1,15 @@
 <html>
     <head >
-        <link rel="stylesheet" type="text/css" href="Disabled Css/style.css">
-        <div class="navbar" style="background-color:rgb(39, 39, 39); color:white">
-            <img src="assets/Full Logo.png" alt="Logo">
-            <a href="features.html"class="button">FEATURES</a>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <header>
+            <a href="home.html">
+                <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
+            </a>
+            <a href="features.html" class="button">FEATURES</a>
             <a href="pricing.html"class="button">PRICING</a>
             <a href="join.html"class="button">JOIN</a>
-            <a href="team.html"class="button">TEAM</a>
-        </div>
+            <a href="team.html"class="button active">TEAM</a>
+        </header>
     </head>
     <body>
         <head>
@@ -40,16 +42,18 @@
         </head>
     </body>
     
-    <footer style="background-color:rgb(39, 39, 39);color:white">
-        <a>Contact Us</a>
+    <footer>
         <br>
-        <a>About 3DIT</a>
+        <a class="info">Contact Us</a>
+        <br>
+        <br>
+        <a class="info">About 3DIT</a>
+        <br>
+        <br>
         <hr>
-        <div class="buttons">
-            <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
-            <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32>
-            <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32>
-            <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32>
-        </div>
+        <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+        <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="socials">
+        <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="socials">
+        <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="socials">
     </footer>
 </html>
