--- a/Website/team.html
+++ b/Website/team.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <head>
-        <link rel="stylesheet" type="text/css" href="Disabled Css/teampage.css">
+        <link rel="stylesheet" type="text/css" href="teampage.css">
         <h1>Team</h1>
         <h2 class = "mainheader">Strawberry</h2>
         
