More CSS cleanups and improvements

--- a/Website/features.html
+++ b/Website/features.html
@@ -1,33 +1,30 @@
 <html>
     <head >
         <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
         <header>
             <a href="home.html">
                 <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
             </a>
-            <a href="features.html" class="button active">FEATURES</a>
+            <a href="features.html"class="button">FEATURES</a>
             <a href="pricing.html"class="button">PRICING</a>
             <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
         </header>
-    </head>
-    <body>
         <h1>How 3DIT works</h1>
         
         <p>3DIT is a platform that lets people connect with 3D printer owners in their region, providing a fast, convenient sharing service.</p>
+        <footer>
+            <a href="assets/unicorn.png" class="info">Contact Us</a>
+            <a href="assets/unicorn.png" class="info">About 3DIT</a>
+            <hr>
+            <a href="assets/unicorn.png">
+                <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+                <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="button">
+                <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="button">
+                <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="button">
+            </a>
+        </footer>
     </body>
-    <footer>
-        <br>
-        <a class="info">Contact Us</a>
-        <br>
-        <br>
-        <a class="info">About 3DIT</a>
-        <br>
-        <br>
-        <hr>
-        <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
-        <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="socials">
-        <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="socials">
-        <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="socials">
-    </footer>
 </html>
