--- a/Website/home.html
+++ b/Website/home.html
@@ -1,6 +1,8 @@
 <html>
-    <head >
+    <head>
         <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
         <header>
             <a href="home.html">
                 <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
@@ -10,32 +12,26 @@
             <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
         </header>
-    </head>
-    <body class="homeshowcase">
-        <div class="showcase-background">
-            <div>
-                <h1>Your Online Network of 3D Printers</h1>
-                <h3>Print what you want, where you want</p>
-                <h2>Connect with 3D printer owners in your city today!</h2>
-                <a href="join.html"class="single-button">REGISTER NOW</a>
-            </div>
-            <div>
-                <img src="assets/car.png" alt="Car Image">
-            </div>
+        <div class="background">
+            <img src="assets/car.png" alt="Car Image">
         </div>
+        <div class="showcase">
+            <h1>Your Online Network of 3D Printers</h1>
+            <h3>Print what you want, where you want</p>
+            <h2>Connect with 3D printer owners in your city today!</h2>
+            <a href="join.html"class="single-button">REGISTER NOW</a>
+        </div>
+        <footer>
+            <a href="assets/unicorn.png" class="info">Contact Us</a>
+            <a href="assets/unicorn.png" class="info">About 3DIT</a>
+            <hr>
+            <a href="assets/unicorn.png">
+                <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+                <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="button">
+                <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="button">
+                <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="button">
+            </a>
+            
+        </footer>
     </body>
-    <footer>
-        <br>
-        <a class="info">Contact Us</a>
-        <br>
-        <br>
-        <a class="info">About 3DIT</a>
-        <br>
-        <br>
-        <hr>
-        <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
-        <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="socials">
-        <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="socials">
-        <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="socials">
-    </footer>
 </html>
