--- a/Website/team.html
+++ b/Website/team.html
@@ -1,16 +1,17 @@
 <html>
     <head >
         <link rel="stylesheet" type="text/css" href="style.css">
-        <div class="navbar" style="background-color:rgb(39, 39, 39); color:white">
-            <img src="assets/Full Logo.png" alt="Logo">
+    </head>
+    <body>
+        <header>
+            <a href="home.html">
+                <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
+            </a>
             <a href="features.html"class="button">FEATURES</a>
             <a href="pricing.html"class="button">PRICING</a>
             <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
-        </div>
-    </head>
-    </body>
-        <head>
+        </header>
         <h1>Team</h1>
         <h2>Strawberry</h2>
        
@@ -39,18 +40,16 @@
         </p>Support our customers and allow them to have access to the best impressions in order to materialize their products, the fruit of their imagination, their knowledge and their creativity, under suitable conditions.</p>
         <img src = "printer.jpg" width=900 height=500>
         </p>In short, be the bridge between your design and the achievement of individuals.</p>
-    </head>
+        <footer>
+            <a href="assets/unicorn.png" class="info">Contact Us</a>
+            <a href="assets/unicorn.png" class="info">About 3DIT</a>
+            <hr>
+            <a href="assets/unicorn.png">
+                <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+                <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="button">
+                <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="button">
+                <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="button">
+            </a>
+        </footer>
     </body>
-    <footer style="background-color:rgb(39, 39, 39);color:white">
-        <a>Contact Us</a>
-        <br>
-        <a>About 3DIT</a>
-        <hr>
-        <div class="buttons">
-            <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
-            <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32>
-            <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32>
-            <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32>
-        </div>
-    </footer>
 </html>
