--- a/Website/join.html
+++ b/Website/join.html
@@ -1,18 +1,17 @@
 <html>
     <head >
         <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
         <header>
             <a href="home.html">
                 <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
             </a>
-            <a href="features.html" class="button">FEATURES</a>
+            <a href="features.html"class="button">FEATURES</a>
             <a href="pricing.html"class="button">PRICING</a>
-            <a href="join.html"class="button active">JOIN</a>
+            <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
         </header>
-    </head>
-
-    <body>
         <h1>Step 1</h1>
         <h2>Sign up with your email</h2>
         <h3>We'll send you a confirmation code before the next step</h3>
@@ -28,20 +27,16 @@
         </form>
         <p>*Required Fields</p>
         <a class="single-button" href="assets/unicorn.png">NEXT</a>
+        <footer>
+            <a href="assets/unicorn.png" class="info">Contact Us</a>
+            <a href="assets/unicorn.png" class="info">About 3DIT</a>
+            <hr>
+            <a href="assets/unicorn.png">
+                <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+                <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="button">
+                <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="button">
+                <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="button">
+            </a>
+        </footer>
     </body>
-
-    <footer>
-        <br>
-        <a class="info">Contact Us</a>
-        <br>
-        <br>
-        <a class="info">About 3DIT</a>
-        <br>
-        <br>
-        <hr>
-        <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
-        <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="socials">
-        <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="socials">
-        <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="socials">
-    </footer>
 </html>
