--- a/Website/pricing.html
+++ b/Website/pricing.html
@@ -1,17 +1,17 @@
 <html>
     <head >
         <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+    <body>
         <header>
             <a href="home.html">
                 <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
             </a>
-            <a href="features.html" class="button">FEATURES</a>
-            <a href="pricing.html"class="button active">PRICING</a>
+            <a href="features.html"class="button">FEATURES</a>
+            <a href="pricing.html"class="button">PRICING</a>
             <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
         </header>
-    </head>
-    <body>
         <div class="priceEstimates">
             <h1>Printing price estimate</h1>
             <p>Printing with carbon costs twice as much as printing with plastic.</p>
@@ -87,19 +87,16 @@
         <div class="buy">
             <a class="single-button" href="assets/unicorn.png">BUY</a>
         </div>
+        <footer>
+            <a href="assets/unicorn.png" class="info">Contact Us</a>
+            <a href="assets/unicorn.png" class="info">About 3DIT</a>
+            <hr>
+            <a href="assets/unicorn.png">
+                <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
+                <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="button">
+                <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="button">
+                <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="button">
+            </a>
+        </footer>
     </body>
-    <footer>
-        <br>
-        <a class="info">Contact Us</a>
-        <br>
-        <br>
-        <a class="info">About 3DIT</a>
-        <br>
-        <br>
-        <hr>
-        <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
-        <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="socials">
-        <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="socials">
-        <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="socials">
-    </footer>
 </html>
