Added link to socials

--- a/Website/home.html
+++ b/Website/home.html
@@ -25,7 +25,7 @@
             <a href="assets/unicorn.png" class="info">Contact Us</a>
             <a href="assets/unicorn.png" class="info">About 3DIT</a>
             <hr>
-            <a href="assets/unicorn.png">
+            <a href="https://www.instagram.com/p/BgSlRglAKBn/?hl=en">
                 <img src="assets/Full Logo.png" alt="3DIT by Strawberry" height=64>
                 <img src="assets/Instagram logo.png" alt="Instagram" width=32 height=32 class="button">
                 <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="button">
