Attempt at different background for each page (part 2)

--- a/Website/home.html
+++ b/Website/home.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
+    <body class = "home">
         <header>
             <a href="home.html">
                 <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
