--- a/Website/features.html
+++ b/Website/features.html
@@ -12,9 +12,10 @@
             <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
         </header>
-        <h1>How 3DIT works</h1>
-        
-        <p>3DIT is a platform that lets people connect with 3D printer owners in their region, providing a fast, convenient sharing service.</p>
+        <div class="betterbody">
+            <h1>How 3DIT works</h1>
+            <p>3DIT is a platform that lets people connect with 3D printer owners in their region, providing a fast, convenient sharing service.</p>
+        </div>
         <footer>
             <a href="assets/unicorn.png" class="info">Contact Us</a>
             <a href="assets/unicorn.png" class="info">About 3DIT</a>
