--- a/Website/home.html
+++ b/Website/home.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
+    <body class="homebody">
         <header>
             <a href="home.html">
                 <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
@@ -12,9 +12,6 @@
             <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
         </header>
-        <div class="background">
-            <img src="assets/car.png" alt="Car Image">
-        </div>
         <div class="showcase">
             <h1>Your Online Network of 3D Printers</h1>
             <h3>Print what you want, where you want</p>
@@ -31,7 +28,6 @@
                 <img src="assets/Twitter logo.png" alt="Twitter" width=32 height=32 class="button">
                 <img src="assets/linked In logo.png" alt="Linked In" width=32 height=32 class="button">
             </a>
-            
         </footer>
     </body>
 </html>
