--- a/Website/pricing.html
+++ b/Website/pricing.html
@@ -12,7 +12,7 @@
             <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
         </header>
-        <div class="priceEstimates">
+        <div class="betterbody">
             <h1>Printing price estimate</h1>
             <p>Printing with carbon costs twice as much as printing with plastic.</p>
             <label for="material">Printing material:</label>
@@ -82,9 +82,6 @@
             <button type="button" onclick="myPrice()">Calculate</button>
             <p>Price estimate before tax and shipping:</p>
             <p id="showPrice"> </p>
-        </div>
-
-        <div class="buy">
             <a class="single-button" href="assets/unicorn.png">BUY</a>
         </div>
         <footer>
