--- a/Website/join.html
+++ b/Website/join.html
@@ -12,21 +12,23 @@
             <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
         </header>
-        <h1>Step 1</h1>
-        <h2>Sign up with your email</h2>
-        <h3>We'll send you a confirmation code before the next step</h3>
-        <form>
-            <label>Email*</label><br>
-            <input type="email" id="width" name="width"><br>
-            <label>Confirm Email*</label><br>
-            <input type="email" id="lenght" name="lenght"><br>
-            <label>Password*</label><br>
-            <input type="password" id="height" name="height"><br>
-            <label>Password*</label><br>
-            <input type="password" id="height" name="height"><br>
-        </form>
-        <p>*Required Fields</p>
-        <a class="single-button" href="assets/unicorn.png">NEXT</a>
+        <div class="betterbody">
+            <h1>Step 1</h1>
+            <h2>Sign up with your email</h2>
+            <h3>We'll send you a confirmation code before the next step</h3>
+            <form>
+                <label>Email*</label><br>
+                <input type="email" id="width" name="width"><br>
+                <label>Confirm Email*</label><br>
+                <input type="email" id="lenght" name="lenght"><br>
+                <label>Password*</label><br>
+                <input type="password" id="height" name="height"><br>
+                <label>Password*</label><br>
+                <input type="password" id="height" name="height"><br>
+            </form>
+            <p>*Required Fields</p>
+            <a class="single-button" href="assets/unicorn.png">NEXT</a>
+        </div>
         <footer>
             <a href="assets/unicorn.png" class="info">Contact Us</a>
             <a href="assets/unicorn.png" class="info">About 3DIT</a>
