More stuff on features page

--- a/Website/join.html
+++ b/Website/join.html
@@ -9,7 +9,7 @@
             </a>
             <a href="features.html"class="button">FEATURES</a>
             <a href="pricing.html"class="button">PRICING</a>
-            <a href="join.html"class="button">JOIN</a>
+            <a href="join.html"class="button active">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
         </header>
         <div class="betterbody">
