--- a/Website/pricing.html
+++ b/Website/pricing.html
@@ -8,7 +8,7 @@
                 <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
             </a>
             <a href="features.html"class="button">FEATURES</a>
-            <a href="pricing.html"class="button">PRICING</a>
+            <a href="pricing.html"class="button active">PRICING</a>
             <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
         </header>
