--- a/Website/features.html
+++ b/Website/features.html
@@ -7,7 +7,7 @@
             <a href="home.html">
                 <img src="assets/Full Logo.png" alt="3DIT by Strawberry" >
             </a>
-            <a href="features.html"class="button">FEATURES</a>
+            <a href="features.html"class="button active">FEATURES</a>
             <a href="pricing.html"class="button">PRICING</a>
             <a href="join.html"class="button">JOIN</a>
             <a href="team.html"class="button">TEAM</a>
@@ -15,6 +15,21 @@
         <div class="betterbody">
             <h1>How 3DIT works</h1>
             <p>3DIT is a platform that lets people connect with 3D printer owners in their region, providing a fast, convenient sharing service.</p>
+            <h2>Step 1 - Register</h2>
+            <p>When creating an account you will have to option to indicate that you have a printer that you are willing to register to the service</p>
+            <h2>Step 2 - Manage your settings</h2>
+            <p>3DIT was created with user choice in mind, sellers as well as buyers have a variety of options to their disposal concerning stuff such as:</p>
+            <ul>
+                <li>materials</li>
+                <li>range</li>
+                <li>size</li>
+                <li>resolution of print</li>
+                <li>supports</li>
+                <li>delivery</li>
+            </ul>            
+            <h2>Step 3 - Manage orders</h2>
+            <p>Once everything is set up you can start accepting/sending orders</p>
+            <h2>Step 4 - Enjoy</h2>
         </div>
         <footer>
             <a href="assets/unicorn.png" class="info">Contact Us</a>
