--- a/Website/team.html
+++ b/Website/team.html
@@ -10,7 +10,7 @@
             <a href="features.html"class="button">FEATURES</a>
             <a href="pricing.html"class="button">PRICING</a>
             <a href="join.html"class="button">JOIN</a>
-            <a href="team.html"class="button">TEAM</a>
+            <a href="team.html"class="button active">TEAM</a>
         </header>
         <div class="betterbody">
             <h1>Team</h1>
