Weekly Sacrifice to the CSS god

--- a/Website/home.html
+++ b/Website/home.html
@@ -13,10 +13,15 @@
             <a href="team.html"class="button">TEAM</a>
         </header>
         <div class="showcase">
-            <h1>Your Online Network of 3D Printers</h1>
-            <h3>Print what you want, where you want</p>
-            <h2>Connect with 3D printer owners in your city today!</h2>
-            <a href="join.html"class="single-button">REGISTER NOW</a>
+            <div class="column">
+                <h1>Your Online Network of 3D Printers</h1>
+                <h3>Print what you want, where you want</p>
+                <h2>Connect with 3D printer owners in your city today!</h2>
+                <a href="join.html"class="single-button">REGISTER NOW</a>
+            </div>
+            <div class="column">
+                <img src="assets/car.png">
+            </div>
         </div>
         <footer>
             <a href="assets/unicorn.png" class="info">Contact Us</a>
