--- a/Website/team.html
+++ b/Website/team.html
@@ -26,21 +26,21 @@
             
             <h2>Our mission</h2>
 
-            </p>Our mission is to offer our customers a wide choice in the materialization of their creativity. And we take pride in providing you with excellent customer service and support. We closely follow the latest printing trends and put the desires of our customers first. Our customers all over the world are happy to be part of our community.</p>
-            </p>We hope you enjoy our services as much as we enjoy providing them to you.</p>
+            <p>Our mission is to offer our customers a wide choice in the materialization of their creativity. And we take pride in providing you with excellent customer service and support. We closely follow the latest printing trends and put the desires of our customers first. Our customers all over the world are happy to be part of our community.</p>
+            <p>We hope you enjoy our services as much as we enjoy providing them to you.</p>
 
             <h2>Our product and our services</h2>
 
-            <img src = "3Dit.png" alt ="3DIT logo">
-            </p>With 3Dit, bring your designs to life</p>
+            <img src = "assets/Full Logo.png" alt ="3DIT logo">
+            <p>Bring your designs to life</p>
 
-            </p>Through our platform, we want to put our customers in contact with individuals and specialists who have 3D printers, the know-how and the materials needed to bring the concepts thought up by our customers to life.</p>
+            <p>Through our platform, we want to put our customers in contact with individuals and specialists who have 3D printers, the know-how and the materials needed to bring the concepts thought up by our customers to life.</p>
 
             <h2>Our goals</h2>
 
-            </p>Support our customers and allow them to have access to the best impressions in order to materialize their products, the fruit of their imagination, their knowledge and their creativity, under suitable conditions.</p>
-            <img src = "printer.jpg" width=900 height=500>
-            </p>In short, be the bridge between your design and the achievement of individuals.</p>
+            <p>Support our customers and allow them to have access to the best impressions in order to materialize their products, the fruit of their imagination, their knowledge and their creativity, under suitable conditions.</p>
+            <img src = "assets/printerimage.png" width=600 height=400 style="background-color: black;">
+            <p>In short, be the bridge between your design and the achievement of individuals.</p>
         </div>
         <footer>
             <a href="assets/unicorn.png" class="info">Contact Us</a>
